--- a/knowledge/package.json
+++ b/knowledge/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-knoledge",
+  "name": "knowledge",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -15,7 +15,6 @@
   },
   "dependencies": {
     "@docusaurus/core": "3.0.0",
-    "@docusaurus/plugin-content-docs": "^3.0.0",
     "@docusaurus/preset-classic": "3.0.0",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^1.2.1",
